--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "astro-netlify-platform-starter",
+    "name": "robblack.dev",
     "type": "module",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "scripts": {
         "dev": "astro dev",
         "start": "astro dev",
@@ -10,25 +10,25 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/netlify": "^6.6.0",
-        "@astrojs/react": "^4.4.0",
-        "@fontsource-variable/inter": "^5.2.5",
+        "@astrojs/netlify": "^6.6.2",
+        "@astrojs/react": "^4.4.2",
+        "@fontsource-variable/inter": "^5.2.8",
         "@netlify/blobs": "^10.4.1",
         "@netlify/functions": "^5.1.0",
-        "@tailwindcss/vite": "^4.1.16",
-        "astro": "^5.15.0",
+        "@tailwindcss/vite": "^4.1.17",
+        "astro": "^5.16.0",
         "blobshape": "^1.0.0",
-        "marked": "^16.4.1",
+        "marked": "^17.0.1",
         "marked-shiki": "^1.2.1",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "tailwindcss": "^4.1.16",
+        "tailwindcss": "^4.1.17",
         "unique-names-generator": "^4.7.1"
     },
     "devDependencies": {
         "@types/blobshape": "^1.0.3",
-        "@types/node": "^20.12.7",
-        "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.2"
+        "@types/node": "^24.10.1",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3"
     }
 }
